# wmmemmon

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  configure.ac
contrib/: Makefile.am  README  memhog.c  memster.c  wmmemmon.spec.in
doc/: Makefile.am  wmmemmon.1
icons/: Makefile.am  README  wmmemmon-16x16.xpm  wmmemmon-32x32.xpm  wmmemmon-48x48.xpm
libdockapp/: Makefile.am  dockapp.c  dockapp.h
m4/: macros.m4
src/: Makefile.am  backdrop_off.xpm  backdrop_on.xpm  main.c  mem.h  mem_cygwin.c  mem_darwin.c  mem_freebsd.c  mem_freebsd_sysctl.c  mem_irix.c  mem_linux.c  mem_netbsd.c  mem_openbsd.c  mem_solaris.c  parts_mem.xpm  parts_swap.xpm
src/image_data/: generate_xpms.sh  parts_mem.xcf  parts_swap.xcf
src/xpms/: backdrop_off.xpm  backdrop_on.xpm  parts_mem.xpm  parts_swap.xpm
